# Blog

./: .gitignore  Cargo.toml  Justfile  README.md  styles.scss  tailwind.config.js
posts/: cross-compilation.md  demo.md  embassy.md  microprocessors.md  rtic.md  tera-templating.md  tmp.md
public/: README.md
scripts/: package.sh  tailwind-download.sh
src/: main.rs  posts.rs  render.rs  templates.rs  utils.rs
styles/: accessibility.scss  custom.scss  lists.scss  main.scss
templates/: base.html.tera  index.html.tera  nav.html.tera  post.html.tera  posts.html.tera
templates/error/: 404.html.tera  500.html.tera
templates/posts/: cross-compilation.md  index.md  tera-templating.md
