[package]
name = "blog"
version = "0.1.0"
edition = "2021"

authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"

description = "My personal blog"
repository = "https://github.com/BenMcAvoy/Blog"
homepage = "https://github.com/BenMcAvoy/Blog"

[dependencies]
chrono = "0.4.31"
highlight-pulldown = "0.2.2"
pulldown-cmark = "0.9.3"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.193", features = ["derive"] }
